# deconz-client

./: .gitignore  Cargo.toml  readme.md  wsl.md
deconz/: Cargo.toml
deconz/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
desktop/ui/: app-window.slint
