[package]
name = "deconz-desktop"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deconz = { path = "../deconz"}
gtk = { package = "gtk4", version = "0.9.6", features = ["v4_10"] }
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread"] }
