
[package]
name = "deconz-desktop"
version = "0.1.0"
edition = "2021"
# cargo-features = ["edition2021"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deconz = { path = "../deconz"}
gtk = { package = "gtk4", version = "0.9.6", features = ["v4_10"] }
palette = "0.7.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread"] }
